welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:9: error: Boolean does not take parameters
     else (nbBiscuits <= 2){
                           ^